--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -2,6 +2,15 @@ body {
   padding-top: 4.5rem;
 }
 
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
+}
+
 .search-wrap {
   margin-right: auto;
   margin-left: auto;
