--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -13,6 +13,10 @@ li {
   list-style-type: none;
 }
 
+.space {
+  height: 16px;
+}
+
 .footer {
   position: absolute;
   bottom: 0;
@@ -21,6 +25,10 @@ li {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+}
+
+.pagination {
+  margin-top: 16px;
 }
 
 .search-wrap {
