--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -17,6 +17,10 @@ li {
   list-style-type: none;
 }
 
+.nav-tabs {
+  margin-bottom: 15px;
+}
+
 .space {
   height: 16px;
 }
@@ -170,6 +174,10 @@ li {
 
 .shard__release-wrap {
   font-weight: 800;
+}
+
+.shard__readme img {
+  max-width: 100%;
 }
 
 .list__heading {
