change search icon

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -59,8 +59,7 @@ ul.not-list li {
   border: none;
   background-color: transparent;
   font-size: 18px;
-  font-family: "icomoon";
-  color: #007bff;
+  color: #141c22;
   position: absolute;
   cursor: pointer;
 }
