src/views/partials/repo_info.slang -> src/views/repo/info.slang

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -200,7 +200,11 @@ ul.not-list li {
   word-wrap: break-word;
 }
 
-a.shard__see_all_dependent_link {
+.shard__see_all_dependent_link {
+  margin-bottom: 10px;
+}
+
+.shard__see_all_dependent_link a {
   color: #c1c4ca;
   font-size: 14px;
   font-style: italic;
@@ -208,7 +212,7 @@ a.shard__see_all_dependent_link {
   text-decoration: none;
 }
 
-.shard__see_all_dependent_link:after {
+.shard__see_all_dependent_link a:after {
   margin-left: 3px;
   font-family: "Times New Roman", sans-serif;
   font-style: normal;
