--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -33,6 +33,7 @@ ul.not-list li {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
   background-color: #f5f5f5;
+  font-size: 12px
 }
 
 .pagination {
