--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -241,3 +241,40 @@ ul.not-list li {
   text-transform: uppercase;
   color: #a6aab2;
 }
+
+/* Back To Top Button */
+/* http://jsfiddle.net/gilbitron/Lt2wH/ */
+@media (min-width : 768px) {
+  #back-to-top {
+    display: none;
+  }
+}
+#back-to-top {
+  font-size: 30px;
+  position: fixed;
+  bottom: 16px;
+  right: 16px;
+  z-index: 9999;
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  line-height: 30px;
+  background: rgba(0, 0, 0, 0.6);
+  color: rgba(255, 255, 255, 0.6);;
+  cursor: pointer;
+  border: 0;
+  border-radius: 2px;
+  text-decoration: none;
+  transition: opacity 0.2s ease-out;
+  opacity: 0;
+}
+#back-to-top::after {
+  content: "\02191";
+}
+#back-to-top:hover {
+  background: #343a40;
+  color: #ffffff;
+}
+#back-to-top.show {
+  opacity: 1;
+}
