--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -260,7 +260,7 @@ ul.not-list li {
   text-align: center;
   line-height: 30px;
   background: rgba(0, 0, 0, 0.6);
-  color: rgba(255, 255, 255, 0.6);;
+  color: rgba(255, 255, 255, 0.6);
   cursor: pointer;
   border: 0;
   border-radius: 2px;
