new style for index page

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -9,6 +9,10 @@ body {
   margin-bottom: 60px;
 }
 
+h3 {
+  font-size: 20px;
+}
+
 ul.not-list {
   padding-left: 0px;
 }
@@ -24,6 +28,7 @@ ul.not-list li {
 .space {
   height: 16px;
 }
+
 
 .footer {
   position: absolute;
@@ -68,6 +73,32 @@ ul.not-list li {
   margin-bottom: 1rem;
 }
 
+.width-full {
+  width: 100%!important;
+}
+
+.text-normal {
+  font-weight: 600!important;
+}
+
+.dont-break-out {
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 .user__avatar img {
   width: 230px;
   height: 230px;
@@ -97,9 +128,15 @@ ul.not-list li {
 }
 
 .shards__shard {
+  display: flex;
   padding-top: 24px;
   padding-bottom: 12px;
   border-bottom: 1px solid #eee;
+}
+
+.shards__shard_desc {
+  margin-bottom: 8px;
+  overflow-wrap: break-word;
 }
 
 .shards__shard_owner {
@@ -113,9 +150,13 @@ ul.not-list li {
 }
 
 .shards__shard_updated {
-  color: #a6aab2;
-  font-size: 14px;
-  font-weight: 500;
+  margin-left: 16px;
+  display: inline;
+}
+
+.shards__shard_open_issues_count {
+  margin-left: 16px;
+  display: inline;
 }
 
 .shards__shard_github ul {
@@ -170,6 +211,7 @@ ul.not-list li {
 
 .shard__topics {
   white-space: initial;
+  margin-bottom: 5px;
 }
 
 .list__items {
