show forked repositories in user profile

--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -146,9 +146,13 @@ ul.not-list li {
 
 .shards__shard {
   display: flex;
-  padding-top: 24px;
-  padding-bottom: 12px;
+  padding: 12px;
+  margin-bottom: 12px;
   border-bottom: 1px solid #eee;
+}
+
+.shards__shard.forked {
+  background: whitesmoke;
 }
 
 .shards__shard_desc {
@@ -170,6 +174,14 @@ ul.not-list li {
   margin-left: 16px;
   display: inline;
 }
+
+.shards__shard_fork {
+  font-size: 12px;
+  color: #586069;
+  margin-bottom: 8px;
+  text-align: right;
+}
+
 
 .shards__shard_github ul {
   padding-left: 0;
