--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -132,7 +132,7 @@ ul.not-list li {
   vertical-align: middle;
   border-radius: 3px;
   width: 32px;
-  height: 32px;;
+  height: 32px;
 }
 
 .user__avatar img {
