--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -125,7 +125,7 @@ ul.not-list li {
   hyphens: auto;
 }
 
-.avatar {
+.avatar_block .avatar {
   display: inline-block;
   overflow: hidden;
   line-height: 1;
@@ -212,18 +212,12 @@ ul.not-list li {
   margin-right: 5px;
 }
 
-.shards__shard_updated {
-  margin-left: 16px;
-  display: inline;
-}
-
 .shards__shard_fork {
   font-size: 12px;
   color: #586069;
   margin-bottom: 8px;
   text-align: right;
 }
-
 
 .shards__shard_github ul {
   padding-left: 0;
@@ -401,4 +395,20 @@ ul.not-list li {
 
 #back-to-top.show {
   opacity: 1;
+}
+
+.users {
+  border: 1px solid #d1d5da;
+  border-radius: 3px;
+}
+
+.user {
+  padding: 16px;
+  border-top: 1px solid #e1e4e8;
+
+}
+
+.user img.avatar {
+  width: 64px;
+  height: 64px;
 }
