--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  padding-top: 4.5rem;
+  padding-top: 3.5rem;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
@@ -56,8 +56,7 @@ ul.not-list li {
 }
 
 .navbar {
-  margin-bottom: 1rem;
-  background-color: #15202b!important;
+  background-color: #24292E!important;
 }
 
 .has-search .form-control {
@@ -67,17 +66,17 @@ ul.not-list li {
 .has-search .form-control {
   border-radius: 2rem;
   border: 0;
-  background-color: #253341;
-  color: #8899a6;
+  background-color: #404448;
+  color: #87898c;
 }
 
 .has-search ::placeholder {
-  color: #8899a6!important;
+  color: #87898c!important;
 }
 
 .form-group.has-search {
   margin-bottom: 0;
-  background-color: #15202b;
+  background-color: #24292E;
 }
 
 .has-search .form-control-feedback {
@@ -89,7 +88,7 @@ ul.not-list li {
   line-height: 2.375rem;
   text-align: center;
   pointer-events: none;
-  color: #8899a6;
+  color: #87898c;
 }
 
 .width-full {
@@ -234,14 +233,16 @@ ul.not-list li {
 }
 
 .page__heading {
-  padding-top: 30px;
-  padding-bottom: 20px;
+  padding-top: 40px;
+  padding-bottom: 40px;
   margin-bottom: 30px;
   text-overflow: ellipsis;
   overflow:hidden;
   overflow-wrap: break-word;
   word-wrap: break-word;
   background-color: #fafbfc!important;
+  border-bottom: 1px solid #e1e4e8!important;
+  border-top: 1px solid #e1e4e8!important;
 }
 
 .page__heading .fork-flag {
@@ -361,6 +362,7 @@ ul.not-list li {
   font-size: 12px;
   text-transform: uppercase;
   color: #a6aab2;
+  margin-top: 15px;
 }
 
 [data-toggle="collapse"] .fa:before {
@@ -411,10 +413,30 @@ ul.not-list li {
 .users .user {
   padding: 16px;
   border-bottom: 1px solid #e1e4e8;
-
 }
 
 .users .user img.avatar {
   width: 64px;
   height: 64px;
+}
+
+.subnav .nav-link {
+  color: #6a737d;
+  cursor: pointer;
+  border: 0;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom-color .4s;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.subnav .nav-link.active {
+  font-weight: 500;
+  color: #1b1f23!important;
+  border-bottom-color: #1074e7!important;
+}
+
+.subnav .nav-link:hover {
+  color: #1b1f23!important;
+  border-bottom-color: #E1E4E8;
 }
