--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -439,7 +439,7 @@ ul.not-list li {
 }
 
 .nav-tabs .nav-link:hover {
-  border-bottom: transparent;
+  border-bottom-color: white;
 }
 
 .subnav .nav-link {
