--- a/public/css/crystal-shards.css
+++ b/public/css/crystal-shards.css
@@ -469,3 +469,8 @@ ul.not-list li {
   color: #1b1f23!important;
   border-bottom-color: #E1E4E8;
 }
+
+#tags-cloud {
+  width: 100%;
+  height: 50vh;
+}
