add archived to repositories

--- a/assets/styles/custom.scss
+++ b/assets/styles/custom.scss
@@ -240,6 +240,11 @@ ul.not-list {
   a {
     color: #000000;
   }
+
+  .archived-badge {
+    font-size: 10px;
+    vertical-align: middle;
+  }
 }
 
 .shards__shard_desc {
